--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "empapp",
+  "name": "app3",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -11,25 +11,26 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
-    "@react-native-async-storage/async-storage": "^1.17.6",
-    "@react-native-picker/picker": "^2.4.1",
-    "@react-navigation/material-bottom-tabs": "^6.2.1",
-    "@react-navigation/native": "^6.0.10",
-    "@react-navigation/native-stack": "^6.6.2",
-    "@reduxjs/toolkit": "^1.8.2",
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-picker/picker": "^2.4.4",
+    "@react-navigation/bottom-tabs": "^6.3.3",
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
+    "@reduxjs/toolkit": "^1.8.5",
     "@ui-kitten/components": "^5.1.2",
     "axios": "^0.27.2",
-    "react": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-paper": "^4.12.1",
-    "react-native-safe-area-context": "^4.2.5",
-    "react-native-screens": "^3.13.1",
-    "react-native-svg": "^12.3.0",
+    "react": "18.1.0",
+    "react-native": "0.70.0",
+    "react-native-date-picker": "^4.2.5",
+    "react-native-safe-area-context": "^4.3.3",
+    "react-native-screens": "^3.17.0",
+    "react-native-svg": "^13.1.0",
     "react-native-svg-transformer": "^1.0.0",
-    "react-native-vector-icons": "^9.1.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1"
+    "redux-devtools-extension": "^2.13.9",
+    "remote-redux-devtools": "^0.5.16"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -38,8 +39,8 @@
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.67.0",
-    "react-test-renderer": "17.0.2"
+    "metro-react-native-babel-preset": "^0.72.1",
+    "react-test-renderer": "18.1.0"
   },
   "jest": {
     "preset": "react-native"
